--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
-<hello name="{{ name }}"></hello>
-<p>Start editing to see some magic happen :)</p>
+<ul style="display: inline">
+  <li>
+    <a routerLink="/">Home</a>
+  </li>
+  <li>
+    <a routerLink="/login">Login</a>
+  </li>
+</ul>
 
-<app-test></app-test>
-<app-second-test></app-second-test>
+<hr />
+
+<router-outlet></router-outlet>
